--- a/index.html
+++ b/index.html
@@ -4,42 +4,44 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
-  <div class="aaa">
+<body class="body">
+  <div class="header">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
-  <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
+  <div class="main-page">
+    <p id="add-element">
       <label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
-        <input id="new-task"class="task" type="text">
-        <button>Add</button>
+      <div class="add-wrapper">
+        <input id="new-task" class="input input-text task" type="text">
+        <button class="button">Add</button>
       </div>
     </p>
     <h3>Todo</h3>
-    <ul id="incompleteTasks">
-      <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+    <ul class="list" id="incomplete-tasks">
+      <li class="list-item">
+        <input class="input checkbox__input" type="checkbox">
+        <label class="label task">Pay Bills</label>
+        <input type="text" class="input input-text task">
+        <button class="button edit__button">Edit</button>
+        <button class="button delete__button"><img class="remove__img" src="./remove.svg"></button>
       </li>
-      <li class="editMode"><input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg"></button>
+      <li class="list-item edit-mode">
+        <input class="input checkbox__input" type="checkbox">
+        <label class="label task">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="input input-text task">
+        <button class="button edit__button">Save</button>
+        <button class="button delete__button"><img class="remove__img" src="./remove.svg"></button>
       </li>
     </ul>
     <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li><input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+    <ul class="list" id="completed-tasks">
+      <li class="list-item">
+        <input class="input checkbox__input" type="checkbox" checked>
+        <label class="label task">See the Doctor</label>
+        <input type="text" class="input input-text task">
+        <button class="button edit__button">Edit</button>
+        <button class="button delete__button"><img class="remove__img" src="./remove.svg"></button>
       </li>
     </ul>
   </div>
