--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body class="body">
-  <div class="header">
+  <header class="header">
     <img src="./eisenhower-matrix.jpg">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="main-page">
-    <p id="add-element">
+  </header>
+  <main class="main-page">
+    <section id="add-element">
       <label for="new-task">Add Item</label>
       <div class="add-wrapper">
         <input id="new-task" class="input input-text task" type="text">
         <button class="button">Add</button>
       </div>
-    </p>
+    </section>
     <h3>Todo</h3>
     <ul class="list" id="incomplete-tasks">
       <li class="list-item">
@@ -44,7 +44,7 @@
         <button class="button delete__button"><img class="remove__img" src="./remove.svg"></button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
