--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body class="body">
   <header class="header">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower" alt="matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main-page">
     <section id="add-element">
@@ -24,14 +24,14 @@
         <label class="label task">Pay Bills</label>
         <input type="text" class="input input-text task">
         <button class="button edit__button">Edit</button>
-        <button class="button delete__button"><img class="remove__img" src="./remove.svg"></button>
+        <button class="button delete__button"><img class="remove__img" src="./remove.svg" alt="delete button"></button>
       </li>
       <li class="list-item edit-mode">
         <input class="input checkbox__input" type="checkbox">
         <label class="label task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="input input-text task">
         <button class="button edit__button">Save</button>
-        <button class="button delete__button"><img class="remove__img" src="./remove.svg"></button>
+        <button class="button delete__button"><img class="remove__img" src="./remove.svg" alt="delete button"></button>
       </li>
     </ul>
     <h3>Completed</h3>
@@ -41,7 +41,7 @@
         <label class="label task">See the Doctor</label>
         <input type="text" class="input input-text task">
         <button class="button edit__button">Edit</button>
-        <button class="button delete__button"><img class="remove__img" src="./remove.svg"></button>
+        <button class="button delete__button"><img class="remove__img" src="./remove.svg" alt="delete button"></button>
       </li>
     </ul>
   </main>
