--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body class="body">
   <header class="header">
-    <img src="./eisenhower-matrix.jpg">
-    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower" alt="matrix-eisenhower">Want more details?</a>
+    <img src="./eisenhower-matrix.jpg" alt="matrix-eisenhower">
+    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main-page">
     <section id="add-element">
